[Fix] Broken style of checkbox Property "size" of '"images" cannot be converted correctly in DynamicValidator Restore changes button won't restore subquestions changes A new OAuth2 provider Added in setting won't have default value of "examLoginMode" HomeView default split rate [Improve] Improved performance of deleting partition as reduced counts to call StatusService to flush

--- a/src/main/web/src/assets/base.css
+++ b/src/main/web/src/assets/base.css
@@ -549,10 +549,15 @@
     border-width: 2px !important;
     border-radius: 1px;
     transition: 200ms var(--ease-in-bounce) !important;
+    transform: scale(0) !important;
 }
 
 .el-checkbox__inner:before {
     top: 7px !important;
+}
+
+.el-checkbox__input.is-checked .el-checkbox__inner:after {
+    transform: rotate(45deg) !important;
 }
 
 .el-date-editor--daterange {
